[gd_scene load_steps=7 format=2]

[ext_resource path="res://MainMenuAssets/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://GameOverMenue.gd" type="Script" id=2]
[ext_resource path="res://MainMenuAssets/MorningRainbow.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://MainMenuAssets/iconWecker.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="GameOverMenue" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MediumAnker" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="PanelContainer" type="PanelContainer" parent="MediumAnker"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -288.5
margin_top = -94.0
margin_right = 288.5
theme = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="MediumAnker/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 585.0
margin_bottom = 89.0
columns = 2

[node name="WeckerGesammelt" type="Label" parent="MediumAnker/PanelContainer/GridContainer"]
margin_top = 4.0
margin_right = 420.0
margin_bottom = 31.0
text = "You found this many alarm Clocks: "
align = 2
valign = 1

[node name="WeckerScore" type="Label" parent="MediumAnker/PanelContainer/GridContainer"]
margin_left = 424.0
margin_right = 580.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "27"
align = 1
valign = 1

[node name="GetraeumteZeit" type="Label" parent="MediumAnker/PanelContainer/GridContainer"]
margin_top = 44.0
margin_right = 420.0
margin_bottom = 71.0
text = "You dreamt for that long: "
align = 2
valign = 1

[node name="GetraeumteZeitScore" type="Label" parent="MediumAnker/PanelContainer/GridContainer"]
margin_left = 424.0
margin_top = 40.0
margin_right = 580.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 2 )
text = "12:23 min"
valign = 1

[node name="IconWecker" type="Sprite" parent="MediumAnker/PanelContainer"]
position = Vector2( 303.5, -117 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="MediumAnker"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_right = 200.0
margin_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 100 )
alignment = 1

[node name="StartButton" type="Button" parent="MediumAnker/VBoxContainer"]
margin_top = 48.0
margin_right = 400.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../QuitButton")
theme = ExtResource( 1 )
text = "Restart"

[node name="Spaceing" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 102.0
margin_right = 400.0
margin_bottom = 116.0

[node name="QuitButton" type="Button" parent="MediumAnker/VBoxContainer"]
margin_top = 120.0
margin_right = 400.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 1 )
text = "Quit"

[connection signal="pressed" from="MediumAnker/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
